@@ -1,3 +1,8 @@
+2006-06-19  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* tools/tiff2pdf.c: Fix handling of -q values.
+	http://bugzilla.remotesensing.org/show_bug.cgi?id=587
+
 2006-06-17  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* tif_readdir.c: Added case in EstimateStripByteCounts() for tiled
